--- a/src/components/LatestMatch/index.css
+++ b/src/components/LatestMatch/index.css
@@ -5,13 +5,23 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: 10px;
+  padding: 30px;
+
+  background-color: #0f172a;
+  border-radius: 10px;
+
+  color: white;
+  width: 1120px;
+  height: 480px;
+  font-family: 'Bree Serif';
 }
 .first-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  text-align: start;
 }
 .second-container {
   display: flex;
@@ -20,11 +30,20 @@
   justify-content: center;
 }
 .competing-team-logo {
-  height: 100px;
+  height: 300px;
 }
 .third-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-end;
+
+  text-align: end;
+}
+.heading {
+  text-align: left;
+  font-size: 25px;
+}
+.para {
+  text-align: start;
 }
